--- a/src/main/resources/fxml/addNewCharacterOverlay.fxml
+++ b/src/main/resources/fxml/addNewCharacterOverlay.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="560.0" stylesheets="@../stylesheet/root.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="560.0" stylesheets="@../stylesheet/root.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="600.0" stroke="BLACK" strokeType="INSIDE" styleClass="darkCard" width="560.0" />
       <Text layoutX="94.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h1" text="Add new character" />
@@ -30,5 +31,10 @@
       <TextField layoutX="77.0" layoutY="441.0" prefHeight="30.0" prefWidth="193.0" promptText="Name" styleClass="smallTextField" />
       <Text layoutX="305.0" layoutY="435.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h3" text="Anime Rating" />
       <TextField layoutX="290.0" layoutY="441.0" prefHeight="30.0" prefWidth="193.0" promptText="Name" styleClass="smallTextField" />
+      <ImageView fitHeight="27.0" fitWidth="41.0" layoutX="20.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../com/magiconch/attackontitan/assets/images/back_button.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
