--- a/src/main/resources/fxml/titansLocationOverlay.fxml
+++ b/src/main/resources/fxml/titansLocationOverlay.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="560.0" stylesheets="@../stylesheet/root.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="560.0" style="-fx-background-color: transparent;" stylesheets="@../stylesheet/root.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="600.0" stroke="BLACK" strokeType="INSIDE" styleClass="darkCard" width="560.0" />
-      <Text layoutX="110.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h1" text="Character added&#10;successfully&#10;" />
-      <Button layoutX="173.0" layoutY="349.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="215.0" text="Back" />
+      <Text layoutX="62.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h1" text="Enter location of titans" />
+      <Text layoutX="153.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h3" text="Enter location between 0 and 15" />
+      <TextField layoutX="31.0" layoutY="300.0" styleClass="largeTextField" />
+      <Button layoutX="173.0" layoutY="381.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="215.0" text="Kill" />
       <ImageView fitHeight="27.0" fitWidth="41.0" layoutX="20.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../com/magiconch/attackontitan/assets/images/back_button.png" />
