--- a/src/main/resources/com/magiconch/attackontitan/mariaWallPageOne.fxml
+++ b/src/main/resources/com/magiconch/attackontitan/mariaWallPageOne.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,15 +20,23 @@
       <Text layoutX="483.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h1" text="Wall of Maria" />
       <Text layoutX="518.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h3" text="Enter number of layers:" />
       <Button fx:id="breakItButton" layoutX="522.0" layoutY="619.0" mnemonicParsing="false" onAction="#breakIt" prefHeight="48.0" prefWidth="176.0" text="Break it!" />
-      <VBox fx:id="wallLayersVbox" layoutX="420.0" layoutY="219.0" prefHeight="400.0" prefWidth="381.0" spacing="10.0" />
-      <TextField fx:id="wallHeightTextBox" alignment="CENTER" layoutX="332.0" layoutY="139.0" prefHeight="55.0" prefWidth="176.0" promptText="height" styleClass="largeTextField" />
-      <Button fx:id="inputButton" layoutX="713.0" layoutY="143.0" mnemonicParsing="false" onAction="#input" text="Break" />
-      <TextField fx:id="wallWidthTextBox" alignment="CENTER" layoutX="523.0" layoutY="139.0" prefHeight="55.0" prefWidth="176.0" promptText="width" styleClass="largeTextField" />
-      <Text fx:id="errorMsg" fill="RED" layoutX="836.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter height and width">
+      <TextField fx:id="wallHeightTextBox" alignment="CENTER" layoutX="415.0" layoutY="144.0" prefHeight="28.0" prefWidth="176.0" promptText="height" styleClass="smallTextField" />
+      <Button fx:id="inputButton" layoutX="567.0" layoutY="195.0" mnemonicParsing="false" onAction="#input" text="Break" />
+      <TextField fx:id="wallWidthTextBox" alignment="CENTER" layoutX="630.0" layoutY="144.0" prefHeight="28.0" prefWidth="176.0" promptText="width" styleClass="smallTextField" />
+      <Text fx:id="errorMsg" fill="RED" layoutX="520.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter height and width">
          <font>
             <Font name="Poppins Regular" size="12.0" />
          </font>
       </Text>
       <Text fx:id="weakestAnsText" layoutX="115.0" layoutY="699.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h2" textAlignment="CENTER" wrappingWidth="990.0" />
+      <ScrollPane fx:id="scroll" layoutX="420.0" layoutY="264.0" prefHeight="324.0" prefWidth="383.0">
+         <content>
+          <AnchorPane fx:id="scrollAPane" minHeight="0.0" minWidth="0.0" prefHeight="288.0" prefWidth="381.0">
+               <children>
+                  <VBox fx:id="wallLayersVbox" prefHeight="324.0" prefWidth="381.0" spacing="10.0" />
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
