--- a/src/main/resources/com/magiconch/attackontitan/searchPage.fxml
+++ b/src/main/resources/com/magiconch/attackontitan/searchPage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1220.0" stylesheets="@../../../stylesheet/root.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.magiconch.controllers.searchPageController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1220.0" stylesheets="@../../../stylesheet/root.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magiconch.controllers.searchPageController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -24,7 +24,7 @@
           <TableColumn fx:id="charHeightCol" prefWidth="90.0" text="Height" />
             <TableColumn fx:id="charWeightCol" prefWidth="90.0" text="Weight" />
             <TableColumn fx:id="charStrCol" prefWidth="90.0" text="Strength" />
-            <TableColumn fx:id="charAbiCol" prefWidth="90.0" text="Ability" />
+            <TableColumn fx:id="charAgiCol" prefWidth="90.0" text="Agility" />
             <TableColumn fx:id="charIntCol" prefWidth="90.0" text="Intelligence" />
             <TableColumn fx:id="charCoorCol" prefWidth="90.0" text="Coordination" />
             <TableColumn fx:id="charLeadCol" prefWidth="90.0" text="Leadership" />
