--- a/src/main/resources/com/magiconch/attackontitan/killTitansPage.fxml
+++ b/src/main/resources/com/magiconch/attackontitan/killTitansPage.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
@@ -80,7 +79,7 @@
       </StackPane>
       <StackPane fx:id="node15" layoutX="414.0" layoutY="74.0">
          <children>
-            <RadioButton mnemonicParsing="false" onAction="#checkIsTitan" prefHeight="20.0" prefWidth="20.0" styleClass="graphNode" toggleGroup="$killNode" />
+            <RadioButton mnemonicParsing="false" onAction="#checkIsTitan" prefHeight="20.0" prefWidth="20.0" styleClass="graphNode" textAlignment="CENTER" toggleGroup="$killNode" wrapText="true" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h2" text="15" textOrigin="BOTTOM" StackPane.alignment="CENTER" />
          </children>
       </StackPane>
@@ -127,23 +126,18 @@
                   <Insets />
                </StackPane.margin>
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
+                  <HBox prefHeight="79.0" prefWidth="1012.0" spacing="20.0">
                      <children>
-                        <Button fx:id="showNodeDetails" mnemonicParsing="false" onAction="#toggleNodeDetails" text="Show node details" />
-                        <Region prefHeight="14.0" prefWidth="200.0" />
-                        <Button fx:id="findShortestPath" mnemonicParsing="false" onAction="#toggleFinder" text="Find shortest path" />
-                        <Region prefHeight="14.0" prefWidth="200.0" />
-                        <Button fx:id="getPriorityKill" mnemonicParsing="false" onAction="#getPriorityKill" text="Get Priority Kill" />
+                        <Button fx:id="showNodeDetails" mnemonicParsing="false" onAction="#toggleNodeDetails" prefHeight="48.0" prefWidth="315.0" text="Show node details" />
+                        <Button fx:id="findShortestPath" mnemonicParsing="false" onAction="#toggleFinder" prefHeight="48.0" prefWidth="320.0" text="Find shortest path" />
+                        <Button fx:id="getPriorityKill" mnemonicParsing="false" onAction="#getPriorityKill" prefHeight="48.0" prefWidth="275.0" text="Get Priority Kill" />
+                        <Button fx:id="resetButton" layoutX="715.0" layoutY="30.0" mnemonicParsing="false" onAction="#resetGraph" prefHeight="48.0" prefWidth="275.0" text="Reset Graph" />
                      </children>
                      <padding>
                         <Insets bottom="20.0" left="30.0" right="30.0" top="20.0" />
                      </padding>
                   </HBox>
-                  <HBox alignment="CENTER">
-                     <children>
-                        <Text fx:id="outputText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h2" />
-                     </children>
-                  </HBox>
+                  <Text fx:id="outputText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h2" textAlignment="CENTER" wrappingWidth="1005.0" />
                </children>
             </VBox>
          </children>
