--- a/src/main/resources/com/magiconch/attackontitan/searchPage.fxml
+++ b/src/main/resources/com/magiconch/attackontitan/searchPage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1220.0" stylesheets="@../../../stylesheet/root.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magiconch.controllers.searchPageController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1220.0" stylesheets="@../../../stylesheet/root.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magiconch.controllers.searchPageController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,7 +18,7 @@
       <Text layoutX="542.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h1" text="Search" />
       <TextField fx:id="searchTextField" layoutX="310.0" layoutY="118.0" prefHeight="30.0" prefWidth="600.0" promptText="keywords" styleClass="smallTextField" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="393.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true" />
-      <TableView fx:id="charTable" layoutX="195.0" layoutY="173.0" prefHeight="510.0" prefWidth="830.0">
+      <TableView fx:id="charTable" layoutX="195.0" layoutY="173.0" prefHeight="510.0" prefWidth="830.0" style="-fx-background-color: 000000;">
         <columns>
           <TableColumn fx:id="charNameCol" prefWidth="200.0" text="Name" />
           <TableColumn fx:id="charHeightCol" prefWidth="90.0" text="Height" />
