--- a/src/main/resources/com/magiconch/attackontitan/mariaWallPageOne.fxml
+++ b/src/main/resources/com/magiconch/attackontitan/mariaWallPageOne.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="mariaScreen" prefHeight="720.0" prefWidth="1220.0" stylesheets="@../../../stylesheet/root.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.magiconch.controllers.mariaWallPageOneController">
+<AnchorPane id="AnchorPane" fx:id="mariaScreen" prefHeight="720.0" prefWidth="1220.0" stylesheets="@../../../stylesheet/root.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magiconch.controllers.mariaWallPageOneController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -21,7 +21,7 @@
       <Text layoutX="518.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="h3" text="Enter number of layers:" />
       <Button fx:id="breakItButton" layoutX="522.0" layoutY="619.0" mnemonicParsing="false" onAction="#breakIt" prefHeight="48.0" prefWidth="176.0" text="Break it!" />
       <TextField fx:id="wallHeightTextBox" alignment="CENTER" layoutX="415.0" layoutY="144.0" prefHeight="28.0" prefWidth="176.0" promptText="height" styleClass="smallTextField" />
-      <Button fx:id="inputButton" layoutX="567.0" layoutY="195.0" mnemonicParsing="false" onAction="#input" text="Break" />
+      <Button fx:id="inputButton" layoutX="474.0" layoutY="193.0" mnemonicParsing="false" onAction="#input" text="Break" />
       <TextField fx:id="wallWidthTextBox" alignment="CENTER" layoutX="630.0" layoutY="144.0" prefHeight="28.0" prefWidth="176.0" promptText="width" styleClass="smallTextField" />
       <Text fx:id="errorMsg" fill="RED" layoutX="520.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter height and width">
          <font>
@@ -38,5 +38,11 @@
             </AnchorPane>
          </content>
       </ScrollPane>
+      <Button fx:id="randomWallButton" layoutX="591.0" layoutY="193.0" mnemonicParsing="false" onAction="#randomWall" text="Random Wall" />
+      <Text fx:id="wallText" fill="#fdda99" layoutX="239.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 400; -fx-font-size: 20px;" textAlignment="CENTER" wrappingWidth="746.0">
+         <font>
+            <Font name="Consolas" size="12.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
